feat: add activated message consumer